# caplib-solo

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  config.ini  runme.sh
SceneSerialization/: CMakeLists.txt
backendlib/: CMakeLists.txt
caplib/: CMakeLists.txt
commonlib/: CMakeLists.txt
configlib/: CMakeLists.txt
dicomlib/: CMakeLists.txt
disp/: CMakeLists.txt
patch/: ivantk_patch.txt
scripts/: 01_checkout_and_patch_externals.sh  02_build_vtk.sh  03_build_itk.sh  04_build_dcmtk.sh  05_build_EVServer.sh  05_build_caplib.sh  05_build_ivantk.sh  06_build_caplib.sh  06_build_evserver.sh  07_build_caplib.sh  disp.sh  run_disp.sh
test/: CMakeLists.txt
test/CPRExamples/: CMakeLists.txt  ebvImageTestUtils.h  ebvMeshTestUtils.h  ebvTestCPRStraightened.cxx  ebvTestCPRStretched.cxx  ebvTestCurvedPlanarReformatStraight.cxx
test/NRRDFileCreation/: CMakeLists.txt
test/SyntheticVessels/: CMakeLists.txt
test/SyntheticVessels/data/: vessel_right_coronary.vtp
test/SyntheticVessels/scripts/: generate_bifurcation_with_refimage.sh  generate_helical_vessel.sh  generate_helical_vessel2.sh  generate_helical_vessel_with_refimage.sh  generate_random_spline_vessel.sh  generate_straight_vessels.sh  generate_vessel_from_centerline.sh
test/disp/: CMakeLists.txt
